--- a/AndroidADB_connector/AndroidADB_connector.csproj
+++ b/AndroidADB_connector/AndroidADB_connector.csproj
@@ -7,6 +7,8 @@
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
     <ApplicationIcon>ADB.ico</ApplicationIcon>
+    <FileVersion>1.1.0.0</FileVersion>
+    <Version>1.1.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
